small comment fix

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -26,9 +26,9 @@ $nav-text-inactive: #ffffff8c;
 $nav-text-hover: #ffffffbf;
 $focused-glow: #f6764f58;
 
-/* ---------
+/* -------
     Fonts
-   --------- */
+   ------- */
 
    .font-phan {
         font-family: "baskerville-display-pt", serif;
