--- a/_includes/index/data-download.html
+++ b/_includes/index/data-download.html
@@ -11,7 +11,7 @@
 
 {%- endcomment -%}
 {%- assign stubs = site.data.config-nav | map: 'stub' | join: ';' -%}
-<div class="card mb-3">
+<div class="card bg-secondary my-4">
     <div class="card-body">
         <{{ include.heading_level | default: 'h2' | strip }} class="card-title h5">Collection as Data</{{ include.heading_level | default: 'h2' | strip }}>
         <p><small>Download this collection's metadata in a variety of reusable formats.</small></p>
