--- a/_includes/index/animated-gallery.html
+++ b/_includes/index/animated-gallery.html
@@ -1,16 +1,16 @@
 {% comment %}   Custom Gallery for PTA   {% endcomment %}
 
 {% assign sample-items = site.data[site.metadata] | sample: 160 %}
-{% assign first-60 = sample-items | slice: 0, 80 %}
-{% assign last-60 = sample-items | slice: 80, 159 %}
+{% assign first-half = sample-items | slice: 0, 80 %}
+{% assign last-half = sample-items | slice: 80, 159 %}
 
 <div class="gallery-container">
     <div id="animated-gallery">
-        {%- for item in first-60 -%}
+        {%- for item in first-half -%}
         <div class="flip-item">
             <div class="flip-item-inner">
                 <div class="flip-item-front"><img class="flip-image" src="{{ item.image_thumb }}" alt="{{ item.image_alt_text }}"></div>
-                <div class="flip-item-back"><img class="flip-image" src="{{ last-60[forloop.index0].image_thumb }}" alt="{{ last-60[forloop.index0].image_alt_text }}"></div>
+                <div class="flip-item-back"><img class="flip-image" src="{{ last-half[forloop.index0].image_thumb }}" alt="{{ last-half[forloop.index0].image_alt_text }}"></div>
             </div>
         </div>
         {%- endfor -%}
