--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,6 +9,8 @@ layout: page
     <img src="{{ '/assets/img/pta-logo-bone.svg' | relative_url }}" alt="{{ site.title }}">
 
     {% include index/description.html %}
+
+    {% include index/films.html %}
     
     {% comment %}
     {% include index/carousel.html %}
