--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -16,6 +16,8 @@ var items = [
         {% if item.display_template %}"template": {{ item.display_template | jsonify }}, {%- endif -%}
         {% if item.format %}"format": {{ item.format | jsonify }}, {%- endif -%}
         {% if item.image_alt_text %}"alt": {{ item.image_alt_text | escape | jsonify }}, {%- endif -%}
+        {% if item.film %}"film": {{ item.film | escape | jsonify }}, {%- endif -%}
+        {% if item.film %}"timestamp": {{ item.timestamp | escape | jsonify }}, {%- endif -%}
         "title":{{ item.title | strip | escape | jsonify }},
         {% if item.parentid %}"parent": {{ item.parentid | jsonify }}, {%- endif -%}
         "id":{{ item.objectid | jsonify }},
@@ -44,19 +46,22 @@ function makeCard(obj) {
     var imgAlt = obj.alt ? obj.alt : obj.title;
 
     // start card
-    var card = '<div class="item col-6 col-md-4 col-lg-3 mb-2 ' + obj.facets + '"><div class="card">';
+    var card = '<div class="item col-6 col-md-4 col-lg-3 mb-2 ' + obj.facets + '"><div class="card"><a href="' + itemHref + '">';
     // top image for items with image
     if(imgSrc) {
-        card += '<a href="' + itemHref + '"> <img class="card-img-top lazyload" src="' + placeholder + '" data-src="' + imgSrc + '" alt="' + imgAlt + '"></a>';
+        card += '<img class="card-img-top lazyload" src="' + placeholder + '" data-src="' + imgSrc + '" alt="Screenshot from ' + obj.film + ' at ' + obj.timestamp + '. ' + imgAlt + '">';
     }
+    // create text container
+    card += '<div class="card-text-container text-center">'
     // title
-    card += '<div class="card-title-container text-center"><a href="' + itemHref + '" class="text-light"><h3 class="card-title h4">' + obj.title + '</h3></a>';
+    // card += '<h3 class="card-title text-light h4 mb-0">' + obj.title + '</h3>';
     // icon thumb for item without image
     if(thumbIcon){
         card += '<p><a href="' + itemHref + '">' + thumbIcon + '</a></p>';
     }
     // other fields
     card += '<p class="card-text">';
+    card += '<span class="film-and-time text-light">' + obj.film + ' ' + obj.timestamp + '</span>'
     {% for f in fields %}{% unless f.hidden == 'true' %}
     if(obj[{{ f.field | jsonify }}]){
     {% if f.display_name %}card += '<strong>{{ f.display_name }}:</strong> ';{% endif %}
@@ -83,7 +88,7 @@ function makeCard(obj) {
     // view button
     // card += '<hr><a href="' + itemHref + '" class="btn btn-sm btn-light" title="link to ' + obj.title + '">View Full Record</a>';
     // close divs
-    card += '</div></div></div>';
+    card += '</div></div></a></div>';
     // send back big string
     return card;
 }
