--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -30,6 +30,12 @@ $focused-glow: #f6764f58;
     Fonts
    ------- */
 
+   .font-boog {
+        font-family: "cheesecake", sans-serif;
+        font-weight: 900;
+        font-style: normal;
+   }
+
    .font-phan {
         font-family: "castoro-titling", serif;
         font-weight: 400;
