--- a/_includes/index/films.html
+++ b/_includes/index/films.html
@@ -1,5 +1,7 @@
 <div class="row">
-    {%- assign films = site.data.config-films | sort: "deployed" -%}
+    {%- assign deployed-films = site.data.config-films | where: "deployed", "true" -%}
+    {%- assign non-deployed-films = site.data.config-films | where: "deployed", "false" -%}
+    {%- assign films = deployed-films | concat: non-deployed-films -%}
     {% for film in films %}
         <div class="col-6 col-lg-4 mb-4 ">
             <div class="btn w-100 film-btn{% if film.deployed == 'false' %} disabled opacity-100" aria-disabled="true"{% else %}"{% endif %}" style="background-image: url({{ film.featured_image }});">
