--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -134,6 +134,18 @@ body {
     color: $primary;
 }
 
+/* Accessibility Utility */
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 /* --------
     Header
    -------- */
