remove aria-hidden from animated gallery

--- a/_includes/index/animated-gallery.html
+++ b/_includes/index/animated-gallery.html
@@ -5,7 +5,7 @@
 {% assign last-half = sample-items | slice: 80, 159 %}
 
 <div class="gallery-container">
-    <div id="animated-gallery" aria-hidden="true">
+    <div id="animated-gallery">
         {%- for item in first-half -%}
         <div class="flip-item">
             <div class="flip-item-inner">
