--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -384,6 +384,12 @@ body {
     }
 }
 
+@media only screen and (max-width: 576px) {
+    .film-btn {
+        height: 200px;
+    }
+}
+
 .coming-soon-overlay {
     height: 100%;
     width: 100%;
