--- a/_includes/feature/jumbotron.html
+++ b/_includes/feature/jumbotron.html
@@ -22,7 +22,7 @@
 {% assign jumboSrc = jumboId | relative_url %}
 {% else %}
 {% assign jumboItem = site.data[site.metadata] | where: "objectid", jumboId | first %}
-{% capture jumboSrc %}{{ jumboItem.object_location | default: jumboItem.image_small | relative_url }}{% endcapture %}
+{% capture jumboSrc %}{{ jumboItem.image_small | relative_url }}{% endcapture %}
 {%- endif -%}
 
 <style>
@@ -51,7 +51,7 @@
     .jumbo-tagline { font-size:.85em; }
 }
 </style>
-<div class="jumbotron feature px-0 border" id="{{ jumbo_div_id }}">
+<div class="jumbotron feature px-0" id="{{ jumbo_div_id }}">
     <div class="jumbo-title-box">
         {% unless include.heading == false and include.text == false %}
         <div class="p-2 text-center text-light bg-dark bg-opacity-75">
