--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -134,6 +134,13 @@ body {
     color: $primary;
 }
 
+.darkened-overlay {
+    height: 100%;
+    width: 100%;
+    background-color: $dark;
+    opacity: .5;
+}
+
 /* Accessibility Utility */
 
 .visually-hidden {
@@ -331,7 +338,7 @@ body {
     }
 }
 
-.film-btn {
+.image-btn {
     position: relative;
     height: 250px;
     padding: 0;
@@ -385,7 +392,7 @@ body {
 }
 
 @media only screen and (max-width: 576px) {
-    .film-btn {
+    .image-btn {
         height: 200px;
     }
 }
