--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,7 +4,7 @@ layout: page
 ---
 <div class="row justify-content-center">
 
-  <div class="col-12 col-md-10 col-lg-8 my-4">
+  <div class="col-12 col-lg-10 my-4">
 
     <div id="home-title"><h2 class="visually-hidden">{{ site.title }}</h2><img src="{{ '/assets/img/pta-logo-bone.svg' | relative_url }}" alt="" class="full-logo"><img src="{{ '/assets/img/pta-logo-narrow-bone.svg' | relative_url }}" alt="" class="narrow-logo"></div>
 
