confirm that juxtapose works with relative urls

--- a/_includes/feature/juxtapose.html
+++ b/_includes/feature/juxtapose.html
@@ -6,6 +6,7 @@
     Alternatively, a URL to an external image can be used in "objectid".
 
     E.G. --> {% include feature/juxtapose.html figure1="punc-05359" figure2="punc-10639" %}
+         --> {% include feature/juxtapose.html figure1="punc-10313" figure2="/assets/img/PDL-airport-3-ja.jpg" label1="Punch-Drunk Love 1:03:13" label2="Feb 21, 2025" %}
 
     Options: 
     - "figure1" and "figure2" = two options below (required)
