--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -30,3 +30,5 @@ layout: page
 {% assign cloud_id = "cloud-div-" | append: fields | slugify %}
 <div id="{{ cloud_id }}" class="text-center my-4 p-2"></div>
 {% include js/cloud-js.html id=cloud_id fields=fields min=min stopwords=stopwords shuffle=page.shuffle button=page.button %}
+
+{% include index/data-download.html %}
