change film metadata structure from csv to jekyll collection and set default layouts for collections

--- a/_includes/index/films.html
+++ b/_includes/index/films.html
@@ -1,12 +1,12 @@
 <div class="row">
-    {%- assign deployed-films = site.data.config-films | where: "deployed", "true" -%}
-    {%- assign non-deployed-films = site.data.config-films | where: "deployed", "false" -%}
-    {%- assign films = deployed-films | concat: non-deployed-films -%}
+    {%- assign deployed-films = site.films | where: "deployed", true -%}
+    {%- assign undeployed-films = site.films | where: "deployed", false -%}
+    {%- assign films = deployed-films | concat: undeployed-films -%}
     {% for film in films %}
         <div class="col-6 col-lg-4 mb-4 ">
-            <div class="btn text-wrap w-100 image-btn{% if film.deployed == 'false' %} disabled opacity-100" aria-disabled="true"{% else %}"{% endif %}" style="background-image: url({{ film.featured_image }});">
-                <a href="{% if film.deployed == 'false' %}#{% else %}{{ film.full_name | slugify | append: '.html' | relative_url }}{% endif %}"><h2 class="w-100 fs-2 p-1 font-{{ film.code | slugify }}">{{ film.full_name }}</h2></a>
-                {% if film.deployed == 'false' %}<div class="coming-soon-overlay"><div class="coming-soon-message">Coming soon!</div></div>{% endif %}
+            <div class="btn text-wrap w-100 image-btn{% if film.deployed == false %} disabled opacity-100" aria-disabled="true"{% else %}"{% endif %}" style="background-image: url({{ film.thumbnail-image }});">
+                <a href="{% if film.deployed == false %}#{% else %}{{ film.url | append: '.html' | relative_url }}{% endif %}"><h2 class="w-100 fs-2 p-1 font-{{ film.code | slugify }}">{{ film.title }}</h2></a>
+                {% if film.deployed == false %}<div class="coming-soon-overlay"><div class="coming-soon-message">Coming soon!</div></div>{% endif %}
             </div>
         </div>
     {% endfor %}
