--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -18,14 +18,24 @@
                 <li class="nav-item">
                     <a class="nav-link{% if page.url == nav.stub %} active{% endif %}" href="{{ nav.stub | relative_url }}">{{ nav.display_name }}</a>
                 </li>
+                {%- elsif nav.display_name == "Films" -%}
+                <li class="nav-item dropdown">
+                    {%- assign films = site.films | where: "deployed", true -%}
+                    <a class="nav-link  dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ nav.display_name }}</a>
+                    <div class="dropdown-menu">
+                        {% for f in films %}
+                        <a class="dropdown-item nav-item font-{{ f.code | downcase }}{% if page.url == f.url %} active{% endif %}" href="{{ f.url | relative_url }}">{{ f.title }}</a>
+                        {% endfor %}
+                    </div>
+                </li>
                 {%- else -%}
                 <li class="nav-item dropdown">
                     {% assign navChildren = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nav.display_name' %}
                     {%- assign childStubs = navChildren | map: 'stub' -%}
-                    <a class="nav-link  dropdown-toggle{% if childStubs contains page.url %} active{% endif %}" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ nav.display_name }}</a>
+                    <a class="nav-link dropdown-toggle{% if childStubs contains page.url %} active{% endif %}" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ nav.display_name }}</a>
                     <div class="dropdown-menu">
                         {% for c in navChildren %}
-                        <a class="dropdown-item nav-item{% if c.font %} font-{{ c.stub | slice: 0, 4 }}{% endif %}{% if page.url == c.stub %} active{% endif %}" href="{{ c.stub | relative_url }}">{{ c.display_name }}</a>
+                        <a class="dropdown-item nav-item{% if page.url == c.stub %} active{% endif %}" href="{{ c.stub | relative_url }}">{{ c.display_name }}</a>
                         {% endfor %}
                     </div>
                 </li>
