--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -36,10 +36,22 @@ $focused-glow: #f6764f58;
         font-style: normal;
    }
 
+   .font-inhe {
+        font-family: "acier-bat-outline", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+   }
+
    .font-lico {
         font-family: "lint-mccree", sans-serif;
         font-weight: 700;
         font-style: italic;
+   }
+
+   .font-mast {
+        font-family: "berthold-baskerville-pro", serif;
+        font-weight: 400;
+        font-style: normal;
    }
 
    .font-phan {
