add thematic tags for punc and overhaul "Subjects" page (now called "Tags")

--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -31,4 +31,4 @@ layout: page
 <div id="{{ cloud_id }}" class="text-center my-4 p-2"></div>
 {% include js/cloud-js.html id=cloud_id fields=fields min=min stopwords=stopwords shuffle=page.shuffle button=page.button %}
 
-{% include index/data-download.html %}
+{% include index/data-download.html heading_level="h3" %}
