--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -20,7 +20,32 @@ custom-foot: js/browse-js.html
         </form>
     </div>
 </div>
-<h3>Filters</h3>
+<div class="row">
+    <div class="col mb-1">
+        <h3 class="d-inline">Filters</h3>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-outline-light border-2 rounded-circle info-button" data-bs-toggle="modal" data-bs-target="#help">i</button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="help" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content bg-dark">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Filters</h5>
+                    <button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Each screenshot in the collection has been tagged with applicable technical
+                        and thematic terms, which you can use to search this collection. Use the dropdown menus below
+                        to select tags...
+                    </p>
+                    <p>See the <a href="{{ '/tags.html#glossary' | relative_url }}">glossary</a> for more information about each tag.</p> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row mb-3 justify-content-center">
     <div class="col-12 col-lg-8 mb-1">
         <ul id="facets-menu" class="list-unstyled m-0 p-0">
