propose new essay page layout and functionality (rough)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -418,6 +418,15 @@ body {
     }
 }
 
+/* ------------
+    Essay Page
+   ------------ */
+.tag-btn {
+    font-size: .75em;
+    padding: .25em .75em;
+}
+
+
 /* -----------------
     Browse Settings
    ----------------- */
