--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -24,7 +24,7 @@ custom-foot: js/browse-js.html
     <div class="col mb-1">
         <h3 class="d-inline">Filters</h3>
         <!-- Button trigger modal -->
-        <button title="How to use filters" type="button" class="btn btn-outline-light border-2 rounded-circle info-button" data-bs-toggle="modal" data-bs-target="#help"><span class="visually-hidden">Info</span><span aria-hidden="true">i</span></button>
+        <button title="How to use filters" type="button" class="btn btn-outline-primary border-2 rounded-circle info-button" data-bs-toggle="modal" data-bs-target="#help"><span class="visually-hidden">Info</span><span aria-hidden="true">i</span></button>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="help" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
