--- a/_layouts/film.html
+++ b/_layouts/film.html
@@ -15,7 +15,8 @@ layout: default
 </div>
 <div class="row justify-content-center text-center mb-4">
     <div class="col-10 col-md-8">
-        <a class="btn btn-lg btn-primary" href="{{ '/browse.html' | relative_url }}#{{ page.title }}">Browse screenshots from this film</a>
+        <a class="btn mx-2 btn-lg btn-primary" href="{{ '/browse.html' | relative_url }}#{{ page.title }}">Browse screenshots</a>
+        <a class="btn mx-2 btn-lg btn-primary" href="{{ '/essays.html' | relative_url }}#{{ page.title | slugify }}">See related essays</a>
     </div>
 </div>
 <div class="row justify-content-center text-center mb-4">
