--- a/_layouts/essay.html
+++ b/_layouts/essay.html
@@ -5,7 +5,8 @@ layout: page
 {% if page.featured_image %}
     {% include feature/jumbotron.html objectid=page.featured_image heading=false text=false padding="6em" %} 
 {% endif %}
+<div class="essay-page-narrow">
 <h2>{{ page.title }}</h2>
 {% if page.author %}<p class="by-line">By {{ page.author }}</p>{% endif %}
-
 {{ content }}
+</div>
